--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Edition Template
-url: "https://long-pig.cloudvent.net"
+title: devLsy blog
+url: "https://github.com/devLsy"
 baseurl:
 google_analytics_key:
 show_full_navigation: true
